# identity

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  identity-node-0.1.1.tgz  identity-node-0.1.2.tgz  identity-node-0.1.3.tgz  identity-node-0.1.4.tgz  index.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/configs/: issuer-cli-goreleaser.yml
.github/linters/: .golangci.yaml  .markdownlint.yml  .protolintrc.yml  .trivy.yml  .yamllint.yml
.github/workflows/: conventional_commits.yml  dependency.yml  docker.yml  lint.yml  pre-commit.yml  release.yml  reusable-docker.yml  reusable-go.yml  reusable-helm.yml  reusable-python.yml  reusable-test.yml  stale.yml  test.yml  (+1 more)
api-spec/: .gitignore  README.md  buf.gen.doc.yaml  buf.gen.jsonschema.yaml  buf.gen.openapi.yaml  buf.gen.openapiv2.yaml  buf.gen.python.yaml  buf.gen.yaml  buf.work.yaml
backend/: .gitignore  .golangci.yaml
charts/: readme.md  values.yaml
deployments/: .gitignore
docs/: 404.html  index.html  sitemap.xml
docs-src/: docusaurus.config.ts  generatedSidebarsProtodocs.js  package-lock.json  package.json  sidebars.ts
identity/: .golangci.yaml  README.md  go.mod  go.sum  test_vault.txt
pkg/: shutdown.go
pyramid/: README.md  go.mod  go.sum
samples/: .gitignore  README.md  docker-compose.yaml
samples/agent/a2a/currency_exchange/: Dockerfile  agent.py  agent_executor.py  main.py  pyproject.toml  test_client.py
samples/mcp/currency_exchange/: Dockerfile  __init__.py  main.py  pyproject.toml  test_client.py
scripts/: buf-generate.sh  docs-generate.sh
sdk/python/: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
sdk/python/agntcy/identity/core/v1alpha1/: errors_pb2.py  id_pb2.py  issuer_pb2.py  jwk_pb2.py  mcp_pb2.py  mcp_pb2_grpc.py  vc_pb2.py
sdk/python/agntcy/identity/issuer/v1alpha1/: local_service_pb2.py  local_service_pb2_grpc.py
sdk/python/agntcy/identity/node/v1alpha1/: id_service_pb2.py  id_service_pb2_grpc.py  issuer_service_pb2.py  issuer_service_pb2_grpc.py  openapi_pb2.py  vc_service_pb2.py  vc_service_pb2_grpc.py
sdk/python/agntcyidentity/: __init__.py  client.py  constant.py  log.py  sdk.py
sdk/python/google/api/: annotations_pb2.py  http_pb2.py
sdk/python/openapiv3/: OpenAPIv3_pb2.py  annotations_pb2.py
ui/: .eslintrc.cjs  .prettierignore  .prettierrc  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.eslint.json  tsconfig.node.json  vite.config.ts
(+1124 files in other folders)
